[package]
name = "zcore-test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nix = "0.27"
libafl_cc = { path = "../../../LibAFL/libafl_cc/" }
libafl_targets = { path = "../../../LibAFL/libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }

# libafl = "0.11.2"
libafl = { path = "../../../LibAFL/libafl/"}
libafl_bolts ={ path = "../../../LibAFL/libafl_bolts/"}